2005-02-25  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.10.modules (howl): update to version 0.9.10,
	which fixes bug #162639.

	* modulesets/gnome28.modules (file-roller): use the gnome-2-8
	branch of file-roller (fixes bug #160980).
	(rhythmbox): use the rhythmbox--main--0.8 branch.  Fixes bug
	#161104.

	* README: Update text related to adding a GDM session.  Patch from
	Mark Drago <markdrago@mail.com> (from bug #159576).

	* jamesh.jhbuildrc: some module_autogenargs additions to my
	personal config.

	* modulesets/gnome24.modules: 
	* modulesets/gnome26.modules: 
	* modulesets/gnome28.modules: 
	* modulesets/gnome-2.10.modules: pass --with-gnome-distributor
	autogen arg, so that jhbuild builds of Gnome can be identified in
	the "about gnome" dialog.

	* modulesets/gnome28.modules (gnome-nettool): use gnome-2-8 branch.

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop.modules: Use the dbus-0-23 branch instead of 
	the DBUS_0_23 tag.

2005-02-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* modulesets/gnome-2.10.modules, modulesets/gnome28.modules:
	add the system-tools-backends module now that it has been splitted
	from the GST frontend, added as a dependency to gnome-system-tools and
	gnome-applets (in 2.10)

2005-02-06  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop.modules: Use the DBUS_0_23 tag of dbus and 
	the hal-0_4-stable-branch of hal so that they build, so that we can 
	build gnome-vfs, to fix the GNOME build. We can change these back to 
	the HEAD branch soon when hal has been ported to the new dbus API.

2005-02-04  Matthias Clasen <mclasen@redhat.com>

	* modulesets/gtk28.modules: Add a moduleset for building
	the current GTK+ development stack.

2005-02-04  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.10.modules: meta-gnome-desktop: Added totem, 
	sound-juicer, gnome-menus, and gnome-backgrounds - the new modules in 
	2.10.