@@ -1,3 +1,10 @@
+2005-02-28  Marco Pesenti Gritti  <marco@gnome.org>
+
+	* jhbuild/modtypes/mozillamodule.py:
+
+	Support the new projects argument of mozilla build
+	system.
+
 2005-02-25  James Henstridge  <james@jamesh.id.au>
 
 	* modulesets/gnome-2.10.modules (howl): update to version 0.9.10,
